--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,10 @@
 	from="/*"
 	to="/"
 status = 200
+
+[[headers]]
+  for = "/*"
+    [headers.values]
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Methods = "*"
+    Access-Control-Allow-Headers = "*"
